--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,9 @@
     </mat-sidenav-content>
     <mat-sidenav-content class="p-3">
         <app-movie-form>
-            <!-- Form di ricerca + bottone -->
+            <!-- Form di ricerca + bottone + risultati -->
         </app-movie-form>
     </mat-sidenav-content>
     <mat-sidenav-content class="p-3">
-        <app-film-card>
-            <!-- Film richiesti -->
-        </app-film-card>
     </mat-sidenav-content>
 </mat-sidenav-container>
