--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,3 @@
-h1 {
-  font-size: 30px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+.container {
+  background-color: rgb(48, 135, 202);
 }
