--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,3 @@
-<mat-sidenav-container class="w-100">
-  <mat-sidenav-content class="p-3">
-    <h1 class="mb-0" style="text-align: center;" [innerText]="title"></h1>
-    <article>
-      <app-movie-form (listMovie)="listMovie=$event"></app-movie-form>
-    </article>
-    <article *ngIf="listMovie" class="example-card" style="display: grid; column-gap: 1.5rem; row-gap: 1.5rem; grid-template-columns: repeat(4, 1fr)">
-      <app-movie-card *ngFor="let movie of listMovie" [movie]="movie"></app-movie-card>
-    </article>
-     <router-outlet></router-outlet>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
